--- a/packages/server/package.json
+++ b/packages/server/package.json
@@ -4,6 +4,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
+    "start": "node app.js -w",
     "build": "node app.js"
   },
   "keywords": [],
@@ -12,7 +13,12 @@
   "devDependencies": {
     "@types/node": "16",
     "@vercel/node": "^2.15.3",
-    "koa": "^2.14.2",
     "typescript": "^5.1.6"
+  },
+  "dependencies": {
+    "koa": "^2.14.2",
+    "@koa/cors": "^4.0.0",
+    "koa-body": "^6.0.1",
+    "koa-router": "^12.0.0"
   }
 }
