--- a/packages/client/package.json
+++ b/packages/client/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "@vitejs/plugin-basic-ssl": "^1.0.1",
     "@vueuse/core": "^10.2.0",
+    "socket.io-client": "^4.7.2",
     "vue": "^3.2.47"
   },
   "devDependencies": {
