--- a/packages/server/package.json
+++ b/packages/server/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "start": "node app.js -w",
+    "start": "node app.ts -w",
     "build": "node app.js"
   },
   "keywords": [],
@@ -16,9 +16,10 @@
     "typescript": "^5.1.6"
   },
   "dependencies": {
-    "koa": "^2.14.2",
     "@koa/cors": "^4.0.0",
+    "koa": "^2.14.2",
     "koa-body": "^6.0.1",
-    "koa-router": "^12.0.0"
+    "koa-router": "^12.0.0",
+    "socket.io": "^4.7.2"
   }
 }
