--- a/packages/server/package.json
+++ b/packages/server/package.json
@@ -11,7 +11,7 @@
   "author": "",
   "license": "ISC",
   "devDependencies": {
-    "@types/node": "16",
+    "@types/node": "^16.18.38",
     "@vercel/node": "^2.15.3",
     "typescript": "^5.1.6"
   },
