--- a/packages/server/package.json
+++ b/packages/server/package.json
@@ -5,7 +5,8 @@
   "main": "index.js",
   "scripts": {
     "start": "node app.ts -w",
-    "build": "node app.ts"
+    "build": "node app.ts",
+    "publish": "vercel --prod"
   },
   "keywords": [],
   "author": "",
